fix for mobile, remove carousel for simpler/better experience on mobile

--- a/style.css
+++ b/style.css
@@ -20,15 +20,18 @@
   height: 50px;
 }
 
-.slide-img {
+.centered-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.centered-span {
+  display: table;
   margin: 0 auto;
-  height: 600px;
 }
 
-.carousel-txt {
-  background-color: rgba(119, 119, 119, 0.5);
-}
-
-.carousel-inner {
-  background-color: rgba(119, 119, 119, 0.1);
+.cont {
+  overflow-x: hidden;
 }
